# qml_car_dashboard

./: .gitignore  CMakeLists.txt  README.md  main.cpp  sample.csv
backend/: csventry.cpp  csventry.h  csvhandler.cpp  csvhandler.h
qml/: Main.qml
qml/components/: EngineTempGuage.qml  Footer.qml  FuelGuage.qml  MiniDisplay.qml  SpeedGuage.qml  csventry.cpp  csventry.h
